tests/no_compile/modify_standalone.stderr
error: Detected Modify field attribute without read and/or write access specifiers
 --> tests/no_compile/modify_standalone.rs:7:5
  |
7 |     #[mmio(Modify)]
  |     ^

error[E0599]: no function or associated item named `new_mmio` found for struct `Uart` in the current scope
  --> tests/no_compile/modify_standalone.rs:15:40
   |
4  | struct Uart {
   | ----------- function or associated item `new_mmio` not found for this struct
...
15 |     let mut mmio_uart = unsafe { Uart::new_mmio(core::ptr::addr_of_mut!(uart)) };
   |                                        ^^^^^^^^ function or associated item not found in `Uart`
